--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,13 @@
+<div class="center hero-unit">
+  <h1>Welcom to the Sample App</h1>
 
-<h1>Sample App</h1>
-<p>
-    This is the home page for the
+  <h2>
+    This is the home page for
       <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-    </p>
+      sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path,class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt:"Rails"), 'https://rubyonrails.org/' %>
